@@ -1,3 +1,7 @@
+2002-03-28  Martin Weber <martweb@gmx.net>
+
+	* output-emf.c: rewritten with Allen Barnett.
+	
 2002-03-28  Masatake YAMATO  <yamato@redhat.com>
 
 	* HACKING (Tool for debugging output):
